--- a/apps/client/src/style.css
+++ b/apps/client/src/style.css
@@ -44,13 +44,13 @@ div {
 }
 
 h1 {
-    font-size: clamp(3rem, 4rem, 4rem);
+    font-size: clamp(calc(3rem * var(--headerModifier)), calc(4rem * var(--headerModifier)), calc(4rem * var(--headerModifier)));
     font-family: DoppioOne;
     letter-spacing: 2px;
 }
 
 h2 {
-    font-size: clamp(2.5rem, 3.5rem, 3.5rem);
+    font-size: clamp(calc(2.5rem * var(--headerModifier)), calc(3.5rem * var(--headerModifier)), calc(3.5rem * var(--headerModifier)));
     font-family: DoppioOne;
     font-weight: normal;
 }
